# gaussf_pipeline

./: .gitignore  README.md  polyester_simulated_data.R  pyproject.toml  setup.py
.github/workflows/: test.yml
src/gaussf_pipeline/: gaussf_tpm.py  kmer_freq_dist.py
test_data/: Homo_sapiens.GRCh38_first_200_transcripts.fa  isoform_list.txt  test_gaussf_tpm.py  test_kmer_counter.py  test_kmer_freq_dist.py  test_merge_normalize.py
workflow/: Snakefile  config.yaml
workflow/envs/: salmon.yaml
